# techjam-jamming

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  debug_mcp.py  docker-compose.yml  newreadme.md  pyproject.toml  requirements.txt  start.sh  test_dynamic_system.py  test_legal_mcp.py  test_mcp.py  test_requirements_migration.py  test_trd_implementation.py
.claude/: settings.local.json
archive/: DEPRECATED_COMPONENTS.md  json_refactorer.py
archive/streamlit_ui/: README.md
archive/streamlit_ui/ui/: app.py
data/: mock_responses.json  terminology.json
data/config/: knowledge_base.md  system_prompt.md
docs/: CLAUDE.md  PRD.md  TRD-UIUX.md  TRD-lawyer.md  TRD.md
docs/archive/: MCP.md  PRD.md  architecture-diagram.md
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApiKeyManager.tsx  ChatList.tsx  DocumentUpload.tsx  HITLSidebar.tsx  LayoutWrapper.tsx  MentionTextarea.tsx  Navigation.tsx
frontend/src/hooks/: use-hitl.ts  use-sse.ts  use-streaming-chat.ts  use-workflow.ts
lawyer_agent(tingli)/: README.md  demo.py  requirements.txt
lawyer_agent(tingli)/config/: __init__.py  config.py
lawyer_agent(tingli)/data/: regulations.json
lawyer_agent(tingli)/src/: __init__.py
lawyer_agent(tingli)/src/api/: main.py
lawyer_agent(tingli)/src/core/: __init__.py  compliance_engine.py  embeddings.py  feature_analyzer.py
lawyer_agent(tingli)/src/database/: __init__.py  law_loader.py  vector_store.py
lawyer_agent(tingli)/src/utils/: __init__.py  test_processor.py
lnjh/: UTAHpdf_parser.py
postgres/: README.md
postgres/scripts/: README.md  schema_setup.py  tableSetup.py
postgres/scripts/data/: tableCreation.sql
postgres/scripts2/: table_setup.py
postgres/scripts2/data/: schemaCreation.sql
postgres/src/helpers/: pdf_parser.py
scripts/: init.sql  run_mock_mcps.py  setup_db.py
src/: __init__.py  config.py  main.py
src/api/endpoints/: batch.py  chat_management.py  document_management.py  documents.py  hitl.py  knowledge_base.py  legal_chat.py  results.py
src/core/: config_manager.py  database.py  llm_service.py  models.py  workflow.py
src/core/agents/: __init__.py  json_refactorer.py  lawyer_agent.py  lawyer_trd_agent.py  mock_mcps.py  real_mcp_client.py
src/database/: chat_models.py
src/legal-mcp/: HI.md  INTEGRATION_SUMMARY.md  README.md  TROUBLESHOOTING_FIXES.md  embed.py  legal-endpoints.md  list_of_jsons.json  mcp_service.py  requirements.txt  run_server.py  server.py
src/legal-mcp/archive/: README.md  server.py
src/legal-mcp/infodump/: req.txt
src/requirements-mcp/: CODEXMD.md  MIGRATION_SUMMARY.md  README.md  hi.md  init.sql  requirements-endpoints.md  server.py  setup_chroma.py
src/services/: chat_storage.py  mcp_client.py  metrics.py  performance_monitor.py
src/ui/: app.py
viv/: pyvenv.cfg
viv/Scripts/: activate  activate.bat
(+55 files in other folders)
